[Qdon] Fix duplicate overflow-wrap in code blocks

--- a/app/javascript/flavours/glitch/styles/mastodon/forms.scss
+++ b/app/javascript/flavours/glitch/styles/mastodon/forms.scss
@@ -1158,7 +1158,6 @@ code {
     display: block;
     width: 100%;
     overflow-wrap: break-word;
-    overflow-wrap: break-word;
     white-space: pre-line;
     line-height: 1.5;
   }
