--- a/app/javascript/styles/mastodon/forms.scss
+++ b/app/javascript/styles/mastodon/forms.scss
@@ -1157,7 +1157,6 @@ code {
     display: block;
     width: 100%;
     overflow-wrap: break-word;
-    overflow-wrap: break-word;
     white-space: pre-line;
     line-height: 1.5;
   }
